--- a/client/src/comps/header/header.css
+++ b/client/src/comps/header/header.css
@@ -6,3 +6,11 @@
   display: flex;
   flex-direction: row;
 }
+#modal {
+  position: fixed;
+  width: 400px;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
